--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
                     <h3 class="panel-title">No Cognito User Pool Configured</h3>
                 </div>
                 <div class="panel-body">
-                    <p>There is no user pool configured in <a href="/js/config/config.js">/js/config/config.js</a>. You'll configure this in Module 2 of the workshop.</p>
+                    <p>There is no user pool configured in <a href="/js/Config/config.js">/js/config/config.js</a>. You'll configure this in Module 2 of the workshop.</p>
                 </div>
             </div>
         </div>
@@ -49,11 +49,6 @@
             </form>
         </section>
 
-        <script src="js/vendor/jquery-3.1.0.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/vendor/aws-cognito-sdk.min.js"></script>
-        <script src="js/vendor/amazon-cognito-identity.min.js"></script>
-        <script src="js/config/config.js"></script>
-        <script src="js/cognito-auth.js"></script>
+        <script src="build/main.js"></script>
     </body>
 </html>
