--- a/ride.html
+++ b/ride.html
@@ -46,7 +46,7 @@
                 <h3 class="panel-title">Successfully Authenticated!</h3>
             </div>
             <div class="panel-body">
-                <p>This page is not functional yet because there is no API invoke URL configured in <a href="/js/config/config.js">/js/config/config.js</a>. You'll configure this in Module 3.</p>
+                <p>This page is not functional yet because there is no API invoke URL configured in <a href="/js/Config/config.js">/js/config/config.js</a>. You'll configure this in Module 3.</p>
                 <p>In the meantime, if you'd like to test the Amazon Cognito user pool authorizer for your API, use the auth token below:</p>
                 <textarea class="authToken"></textarea>
             </div>
@@ -60,7 +60,7 @@
                 <h3 class="panel-title">No Cognito User Pool Configured</h3>
             </div>
             <div class="panel-body">
-                <p>There is no user pool configured in <a href="/js/config/config.js">/js/config/config.js</a>. You'll configure this in Module 2 of the workshop.</p>
+                <p>There is no user pool configured in <a href="/js/Config/config.js">/js/config/config.js</a>. You'll configure this in Module 2 of the workshop.</p>
             </div>
         </div>
     </div>
@@ -87,16 +87,7 @@
         </div>
     </div>
 
-
-    <script src="js/vendor/jquery-3.1.0.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/vendor/aws-cognito-sdk.min.js"></script>
-    <script src="js/vendor/amazon-cognito-identity.min.js"></script>
-    <script src="https://js.arcgis.com/4.3/"></script>
-    <script src="js/config/config.js"></script>
-    <script src="js/cognito-auth.js"></script>
-    <script src="js/esri-map.js"></script>
-    <script src="js/ride.js"></script>
+    <script src="build/ride.js"></script>
 </body>
 
 </html>
