Allow register via username

--- a/src/verify.html
+++ b/src/verify.html
@@ -42,7 +42,7 @@
         <section class="form-wrap">
             <h1>Verify Email</h1>
             <form id="verifyForm">
-              <input type="email" id="emailInputVerify" placeholder="Email" required>
+              <input type="text" id="usernameInputVerify" placeholder="Username" required>
               <input type="text" id="codeInputVerify" placeholder="Verification Code" pattern=".*" required>
 
               <input type="submit" value="Verify">
