--- a/src/signin.html
+++ b/src/signin.html
@@ -42,7 +42,7 @@
         <section class="form-wrap">
             <h1>Sign In</h1>
             <form id="signinForm">
-              <input type="email" id="emailInputSignin" placeholder="Email" required>
+              <input type="text" id="usernameInputSignin" placeholder="Username" required>
               <input type="password" id="passwordInputSignin" placeholder="Password" pattern=".*" required>
 
               <input type="submit" value="Sign in">
